# slipe-Rust_Rocket

./: .gitignore  Cargo.toml  Rocket.toml  playing_0.html  playing_1.html  playing_gote.html  playing_sente.html  room_list.html
src/: game.rs  global.rs  main.rs
static/: playing_0.html  playing_1.html  room_list.html
