[package]
name = "slipe_rocket"
version = "0.1.0"
authors = ["lenna_kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
lazy_static = "1.3.0"
rand = "0.6"
